--- a/languages/uix-slideshow-zh_CN.po
+++ b/languages/uix-slideshow-zh_CN.po
@@ -2,11 +2,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Uix Slides 1.0.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/_s\n"
-"POT-Creation-Date: 2020-01-18 05:36+0000\n"
+"POT-Creation-Date: 2020-01-18 05:51+0000\n"
 "POT-Revision-Date: Sat Apr 08 2017 14:41:58 GMT+0800 (CST)\n"
-"PO-Revision-Date: 2020-01-18 05:42+0000\n"
+"PO-Revision-Date: 2020-01-18 05:52+0000\n"
 "Last-Translator: chuckie <uiuxlab@gmail.com>\n"
-"Language-Team: Chinese (China)\n"
+"Language-Team: 简体中文\n"
 "Language: zh_CN\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "MIME-Version: 1.0\n"
@@ -232,6 +232,10 @@ msgid ""
 "Enter a custom URL to link this slide to. When the URL is not empty, the "
 "button will be displayed on the front-end page."
 msgstr "输入自定义URL以将此幻灯片链接到。 如果URL不为空，则该按钮将显示在前端页面上。"
+
+#: includes/admin/options.php:86
+msgid "Target"
+msgstr "打开方式"
 
 #: includes/admin/options.php:87
 msgid "Open Link In A New Window/Tab."
